<resources>
    <string name="app_name">Calculatrice</string>

    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="boldedtext">C</string>
    <string name="supprime">C</string>
    <string name="exposant">^</string>
    <string name="parentheses">( )</string>
    <string name="divise">÷</string>
    <string name="multiple">x</string>
    <string name="addition">+</string>
    <string name="sustraction">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="egale">=</string>
    <string name="backspace"> </string>
    <string name="cosinus">Cos</string>
    <string name="sinus">Sin</string>

    <string name="display"></string>

</resources>